-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0, 5.7.0
-
None
-
Ubuntu 14.04
-
a8fe4b989b2002d3fcb4e33afe16bd6fd2ff192b
QML documentation says that Audio should have an onLoaded().
```
loaded()
This signal is emitted when the playlist loading succeeded.
The corresponding handler is onLoaded.
```
However, it simply is not implemented. I reviewed the source code, and it seems to be an oversight?
For Gerrit Dashboard: QTBUG-55007 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
169815,2 | fix documentation for QML Playlist | 5.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |