fix documentation for QML Playlist

Some signals for QDeclarativePlaylist were wrongly tagged to
QDeclarativeAudio.

Task-number: QTBUG-55007
Change-Id: I16185f74768b45115f19c049ec1261d1d3dadf5c
Reviewed-by: Yoann Lopes <yoann.lopes@qt.io>