src/imports/multimedia/qdeclarativeplaylist.cpp
@@ -517,7 +517,7 @@ void QDeclarativePlaylist::componentComplete()
 }
 
 /*!
-    \qmlsignal QtMultimedia::Audio::itemAboutToBeInserted(start, end)
+    \qmlsignal QtMultimedia::Playlist::itemAboutToBeInserted(start, end)
 
     This signal is emitted when items are to be inserted into the playlist at \a start and ending at
     \a end.
@@ -526,7 +526,7 @@ void QDeclarativePlaylist::componentComplete()
 */
 
 /*!
-    \qmlsignal QtMultimedia::Audio::itemInserted(start, end)
+    \qmlsignal QtMultimedia::Playlist::itemInserted(start, end)
 
     This signal is emitted after items have been inserted into the playlist. The new items are those
     between \a start and \a end inclusive.
@@ -535,7 +535,7 @@ void QDeclarativePlaylist::componentComplete()
 */
 
 /*!
-    \qmlsignal QtMultimedia::Audio::itemAboutToBeRemoved(start, end)
+    \qmlsignal QtMultimedia::Playlist::itemAboutToBeRemoved(start, end)
 
     This signal emitted when items are to be deleted from the playlist at \a start and ending at
     \a end.
@@ -544,7 +544,7 @@ void QDeclarativePlaylist::componentComplete()
 */
 
 /*!
-    \qmlsignal QtMultimedia::Audio::itemRemoved(start, end)
+    \qmlsignal QtMultimedia::Playlist::itemRemoved(start, end)
 
     This signal is emitted after items have been removed from the playlist. The removed items are
     those between \a start and \a end inclusive.
@@ -553,7 +553,7 @@ void QDeclarativePlaylist::componentComplete()
 */
 
 /*!
-    \qmlsignal QtMultimedia::Audio::itemChanged(start, end)
+    \qmlsignal QtMultimedia::Playlist::itemChanged(start, end)
 
     This signal is emitted after items have been changed in the playlist between \a start and
     \a end positions inclusive.
@@ -562,7 +562,7 @@ void QDeclarativePlaylist::componentComplete()
 */
 
 /*!
-    \qmlsignal QtMultimedia::Audio::loaded()
+    \qmlsignal QtMultimedia::Playlist::loaded()
 
     This signal is emitted when the playlist loading succeeded.
 
@@ -570,7 +570,7 @@ void QDeclarativePlaylist::componentComplete()
 */
 
 /*!
-    \qmlsignal QtMultimedia::Audio::loadFailed()
+    \qmlsignal QtMultimedia::Playlist::loadFailed()
 
     This signal is emitted when the playlist loading failed. \l error and \l errorString can be
     checked for more information on the failure.
